BradkenProduction/force-app/main/default/objects/Customer_Product__c/Customer_Product__c.object-meta.xml
<CustomObject>
    <description>Customer Products mapping to Bradken Products</description>
    <label>Customer Product</label>
    <nameField>
        <label>Customer Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>