BradkenProduction/force-app/main/default/objects/Customer_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer</description>
    <inlineHelpText>Customer</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>