BradkenProduction/force-app/main/default/objects/Customer_Product__c/fields/Customer_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Description__c</fullName>
    <description>Customer Product Number Description</description>
    <inlineHelpText>Customer Product Number Description</inlineHelpText>
    <label>Customer Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>