BradkenProduction/force-app/main/default/objects/Customer_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bradken Part Number</description>
    <inlineHelpText>Bradken Part Number</inlineHelpText>
    <label>Bradken Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Products</relationshipLabel>
    <relationshipName>Customer_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>