BradkenProduction/force-app/main/default/objects/Customer_Product__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>Sequence number of the Product Code from Unibis. This comes into play if there are multiple codes for a product for a customer.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>