BradkenProduction/force-app/main/default/objects/Customer_Product__c/fields/Unibis_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Unibis_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unibis External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>