BradkenProduction/force-app/main/default/objects/Customer_Product__c/recordTypes/Customer_Product.recordType-meta.xml
<RecordType>
    <fullName>Customer_Product</fullName>
    <active>true</active>
    <label>Customer Product</label>
</RecordType>