BradkenProduction/force-app/main/default/objects/Customer_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Customer_Product_Description__c</columns>
    <columns>Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>BK4T5503</value>
    </filters>
    <label>All</label>
</ListView>