BradkenProduction/force-app/main/default/objects/Customer_Product__c/listViews/WA_PARTS.listView-meta.xml
<ListView>
    <fullName>WA_PARTS</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Customer_Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>BHP</value>
    </filters>
    <label>WA PARTS</label>
</ListView>